--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 ATLAS_URI=mongodb+srv://access:access1@mern-by3ud.azure.mongodb.net/test?retryWrites=true&w=majority
+ACCESS_TOKEN_SECRET=PPwU!!!SH$F%m9dVn!BAS
+REFRESH_TOEKN_SECRET=6_9CF487wL@$TB*H*xhv!
